--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,44 +1,9 @@
-<header>
-   <div class="header-container">
-       <nav class="navbar navbar-expand">
-           <div class="row header-logo">
-               <div class="col-md-3 ux-logo">
-                   <img src="./assets/images/logo6.svg" routerLink="/" alt="Logo">
-               </div>
-               <div class="col-md-7">
-               <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
-               </div>
-           </div>
-           <div class="collapse navbar-collapse">
-             <ul class="navbar-nav ml-auto">
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/works"><span>Work</span></a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About</a>
-               </li>
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/services">Services</a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Let's Talk</a>
-               </li>
-               <div class="col-md-1 only-mobile">
-                   <div class="lines"></div>
-               </div>
-               <li class="nav-item menu">
-                   <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png" alt="menu"></a>
-               </li>
-             </ul>
-           </div>
-       </nav>
-   </div>
-</header>
+
 <div class="blog">
     <div class="banner">
        <div class="container">
           <div class="blog-layout1">
-             <h1>MINTify your thoughts <span> with <br> our latest blogs and articles</span> </h1>
+             <div class="blog-heading">MINTify your thoughts <span> with <br> our latest blogs and articles</span> </div>
              <h4>For more blogs like this checkout our <a href="https://medium.com/uxmint">Medium</a></h4>
           </div>
        </div>
