--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -2,17 +2,19 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 :host{
-    padding-top: 0px;
+    padding-top: 100px;
+    margin-top: -200px;
 }
 .services{
     .layout{
-        background-color: #E4E4E4;
+        background-color: #f7f5f0;
         padding-top: 140px;
         height: 700px;
-        padding: 200px 0px;       
-        img{
-            width: 100%;
-            opacity: 0.5;
+        padding: 200px 0px;   
+            
+        svg{
+            margin-left: -700px;
+            margin-top: -150px;
         }
         h1{
             font-size: 60px;
@@ -75,7 +77,7 @@
         }
     }
     .types{
-        background-color: #5277BA;
+        background-color:#f7f5f0;
         padding: 100px 0;
         color: #FFF;
         li{
@@ -202,7 +204,19 @@
     }
 
     .cater{
-        padding: 100px 0;
+        // // .container{
+        // //     width: 1150px;
+        // }
+        padding: 40px;
+        background-color: #f7f5f0;
+        h1{
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 20px;
+            font-family:'baskerville';
+            font-size: 40px;
+            color:#000000;
+        }
         li{
             font-size: 28px;
             font-weight: 300;
@@ -210,20 +224,23 @@
             font-family: Baskerville;
         }
         h2{
-            font-size: 56px;
+            font-size: 40px;
             font-weight: 500;
             margin-bottom: 30px;
             font-family: Baskerville;
             color: #3B3B3B;
         }
         p{
-            font-size: 18px;
+            font-size: 15px;
             font-weight: 300;
             color: #707071;
-            margin-bottom: 60px;
+            margin-bottom:30px;
             line-height: 35px;
             font-family: 'Muli', sans-serif;
+            text-align: justify;
         }
+        
+       
         .nav-link{
             color: #282829;
         }
@@ -315,6 +332,103 @@
             display: none;
         }
     }
+    .services-list{
+        // .container{
+        //     width: 1150px;
+        // }
+    
+        h1{
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 20px;
+            font-family:'baskerville';
+            font-size:50px;
+        }
+        .service-offer {
+            text-align: left;
+            .service-card p {
+                text-align: left;
+                line-height:30px;
+                font-family: "Muli", sans-serif;
+                font-size :16px;
+                font-weight:400;
+            }
+            }
+            
+            .service-card{
+                color: #707071;
+                // height: 400px;
+                text-align:center;
+                // justify-content: space-between;
+                // width: 50px;
+                // padding-top:50px;
+                margin-bottom: 20px;
+                // max-width: 1100px;
+                // min-width:400px;
+                h4{
+                    margin-top:20px;
+                    margin-bottom:25px;
+                    color: #3B3B3B;
+                    font-size: 22px;
+                    text-align: left;
+                
+                }
+                h1{
+                    color: #000000;
+                }
+                p{
+                    text-align: left;
+                }
+            .swipe-button{          
+                color:#3B3B3B;
+            }
+            svg{
+                width: 20%;
+            }
+        }
+        // .service-card2{
+        //     color: #707071;
+        //     // height: 400px;
+        //     text-align: left;
+        //     // justify-content: space-between;
+        //     // width: 50px;
+        //     padding-top:50px;
+        //     margin-bottom: 15px;
+        //     // max-width: 1100px;
+        //     // min-width:400px;
+        //     // border-right: solid #f0efed;
+        //     h4{
+        //         margin-bottom:25px;
+        //         color: #3B3B3B;
+        //         font-size: 22px;
+
+        //     }
+        // .swipe-button{          
+        //     color:#3B3B3B;
+        //     text-align: center;
+        // }
+        
+        // }
+        .col-md-4:hover{
+           
+            .swipe-button{
+                
+                text-decoration: none;
+            }
+            
+            .swipe-button:hover{
+                color:#C3343C !important;
+            }
+            
+
+        }
+        .serv-button{
+            color: #000000;
+        }
+       
+        
+    }
+    
     }
 
 
@@ -328,7 +442,7 @@
     padding: 0 20px 40px 20px;
 }
 .service .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-    background-color: #FCFCFC;
+    background-color: #f7f5f0;
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
@@ -368,7 +482,7 @@
         height: 100%;
         top:0;
         left:0;
-        background-color: #ffffff;
+        background-color: #f7f5f0;
         transition:all 1.5s;
         transform: translateX(-100%);
         z-index: -1;
@@ -388,151 +502,3 @@
     height: 80px;
     margin-top: 42px;
 }
-
-
-// *********** HEADER START*********** //
-
-header{
-    z-index: 1;
-    background-color: #E4E4E4;
-    .nav-item a.active{
-        color: #000000;
-        border-bottom: 3px solid #000000;
-    }
-    .nav-item{
-        margin-left: 22px;
-    }
-    h2{
-        font-family: "Muli", sans-serif;
-        font-size: 14px;
-        color: #000000;
-        margin-left: -14px;
-        padding-top: 9px;
-    }
-}
-
-.header-logo{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    cursor: pointer;
-}
-.ux-logo{
-    img{
-        margin-left: 28px;
-        margin-top: 7px;
-        width: 75%;
-    }
-}
-
-@include media-breakpoint-down(sm){
-    h2{
-        margin-left: -78px;
-        padding-top: 13px;
-    }
-    .ux-logo{
-        img{
-            margin-left: 6px;
-            margin-top: 7px;
-            width: 54%;
-        }}
-}
-.nav-link{
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    font-weight: 400;
-}
-.lines{
-    border-left: 1px solid #AAAAAA;
-    height: 25px;
-    margin-top: 8px;
-    margin-left: 50px;
-}
-.menu-activator{
-    cursor: pointer;
-    position: relative;
-    margin-left: 30px;
-    @include media-breakpoint-down(lg){
-        margin-left: 30px;
-    }
-    @include media-breakpoint-down(md){
-        margin-left: 4px;
-    }
-    @include media-breakpoint-down(sm){
-        margin-left: 2px;
-    }
-    img{
-        height: 16px;
-        width: auto;
-        margin-left: 0px;
-        margin-top: -5px;
-        @include media-breakpoint-down(lg){
-            height: 28px;
-            margin-top: -5px;
-        }
-        @include media-breakpoint-down(md){
-            height: 24px;
-            margin-top: -10px;
-        }
-        @include media-breakpoint-down(sm){
-            height: 21px;
-            margin-top: -5px;
-        }
-    }
-}
-
-
-@include media-breakpoint-down(lg){
-    img{
-        margin-left: -20px;
-        padding-top: 7px;
-    }
-    .lines{
-      margin-left: 85px;
-        }
-        .nav-item{
-            margin-left: 57px;
-        }
-
-}
-@include media-breakpoint-down(md){
-    .lines{
-      margin-left: 45px;
-        }
-        .nav-item{
-            margin-left: 15px;
-        }
-        .menu-activator{
-            img{
-               margin-left: 15px;
-            }
-        }
-
-}
-@include media-breakpoint-down(sm){
-    .mobile-only{
-        display: inline-block;
-        a{
-            color: #a3a3a3 !important;
-        }
-    }
-    .mediaIcons{
-        ul{
-            list-style: none;
-            display: inline-flex;
-            li{
-                span{
-                    margin-right: 4px;
-                }
-            }
-        }
-    }
-    .only-mobile{
-        display: none;
-    }
-    .web-only{
-        display: none;
-    }
-}
-
-  // *********** HEADER ENDS *********** //
