--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -1,39 +1,4 @@
-<header>
-   <div class="header-container">
-       <nav class="navbar navbar-expand">
-           <div class="row header-logo">
-               <div class="col-md-3 ux-logo">
-                   <img src="./assets/images/logo6.svg" routerLink="/" alt="Logo">
-               </div>
-               <div class="col-md-7">
-               <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
-               </div>
-           </div>
-           <div class="collapse navbar-collapse">
-             <ul class="navbar-nav ml-auto">
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/works"><span>Work</span></a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About</a>
-               </li>
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/services">Services</a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Let's Talk</a>
-               </li>
-               <div class="col-md-1 only-mobile">
-                   <div class="lines"></div>
-               </div>
-               <li class="nav-item menu">
-                   <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png" alt="menu"></a>
-               </li>
-             </ul>
-           </div>
-       </nav>
-   </div>
-</header>
+
 <div class="works">
       <div class="banner">
          <div class="container">
@@ -73,9 +38,7 @@
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
-                        <h2>Digital 
-                           <br>Transformation 
-                           <br>for Telcom </h2>
+                        <h2>Digital Transformation for Telcom </h2>
                         <p>UX . UI . Mobile . B2B</p>
                         <div class="anime-button">
                            <a   routerLink="/work/networking">Case Study</a>
@@ -99,47 +62,20 @@
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
-                     <div class="container">
-                        <div class="right-content ">
-                           <h2>Event Hosting 
-                            <br>made stressless</h2>
-                           <p>UX . UI . Web . Mobile . B2C</p>
+                        <div class="right-content">
+                           <h2></h2>
+                           <p></p>
                            <div class="anime-button">
-                              <a   routerLink="/work/event-management">Case Study</a>
+                              <a routerLink="/work/event-management">Case Study</a>
                            </div>  
                         </div>
                      </div>
                   </div>
                </div>
-            </div>
          </div>
 
-         <div class="work-left">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-6 ordertwo">
-                     <div class="left-content">
-                        <h2>To adapt
-                           organic food
-                           as a Lifestyle</h2>
-                        <p>UX . UI . web . Mobile .B2C</p>
-                           <div class="anime-button">
-                           <a   routerLink="/work/health-care">Case Study</a>
-                        </div>  
-                        
-                     </div>
-                  </div>
-                  <div class="col-md-6 orderone">
-                     <div class="right-image">
-                        <img src="./assets/images/works/works3.png" alt="To adapt organic food as a lifestyle">
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
 
          <div class="work-right">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
@@ -158,16 +94,14 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
 
          <div class="work-left">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
-                        <h2>A designers platform for creative upskill</h2>
-                        <p>UX . UI . Mobile . Web . B2C</p>
+                        <h2></h2>
+                        <p></p>
                         <div class="anime-button">
                            <a routerLink="/work/skill-development">Case Study</a>
                         </div>
@@ -179,10 +113,8 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
          <div class="work-right">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
@@ -201,11 +133,9 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
 
          <div class="work-left">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
@@ -222,10 +152,8 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
          <div class="work-right">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
@@ -244,11 +172,9 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
 
          <div class="work-left">
-            <div class="container">
                <div class="row">
                   <div class="col-md-6 ordertwo">
                      <div class="left-content">
@@ -265,7 +191,6 @@
                      </div>
                   </div>
                </div>
-            </div>
          </div>
       </div>
    </div>
