--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -2,14 +2,15 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 :host{
-    padding-top: 0px;
+    padding-top: 100px;
+    margin-top: -200px;
 }
 .about-us{
     .only-mobile{
         display: none;
     }
     .about{
-        background-color: #E4E4E4;
+        background-color: #f7f5f0;
         img{
             width: 100%;
         }
@@ -75,10 +76,11 @@
             font-family: 'Muli', sans-serif;
         }   
 .design-layout{
-            background-color: #ebebeb;
+            background-color: #f7f5f0;
             padding-left: 60px;
             .design-left{
                 padding: 150px 30px;
+                margin-left: 200px;
             }
             .button{
                 margin-top: 60px;
@@ -101,10 +103,9 @@
 .design-layouts{
             background-color: #282829;
             border: 1px solid #707070;
-            text-align: center;
-            
             .design-right{
                 padding: 150px 30px;
+              
                 .logo{
                     list-style: none;
                     padding: 60px 0;
@@ -196,7 +197,7 @@
                     display: none;
                 }
                 .custom-slider-main{
-                    background-color: #E2E2E2;
+                    background-color: #f7f5f0;
                     display: flex;
                     overflow-y: scroll;
                     scroll-behavior: smooth;
@@ -254,7 +255,7 @@
                     border: 1px solid #fff;
                     padding: 2px 0px;
                     margin: 20px;
-                    background-color: #ffffff;
+                    background-color: #f7f5f0;
                     }
                     .custom-slider-main::-webkit-scrollbar {
                     width: 0px;
@@ -267,7 +268,7 @@
             }
 }      
 .about-layout1{
-        background-color: #FCFCFC;
+        background-color:#f7f5f0;
             .design-layout{
                 h2{
                     font-family: Baskerville;
@@ -537,143 +538,3 @@
             }
     }
 }
-// *********** HEADER START*********** //
-header{
-    z-index: 1;
-    background-color: #E4E4E4;
-}
-.nav-item{
-    margin-left: 22px;
-}
-.header-logo{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    cursor: pointer;
-}
-.ux-logo{
-    img{
-        margin-left: 28px;
-        margin-top: 7px;
-        width: 75%;
-    }
-}
-h2{
-    font-family: "Muli", sans-serif;
-    font-size: 14px;
-    color: #000000;
-    margin-left: -14px;
-    padding-top: 9px;
-}
-@include media-breakpoint-down(sm){
-    h2{
-        margin-left: -78px;
-        padding-top: 13px;
-    }
-    .ux-logo{
-        img{
-            margin-left: 6px;
-            margin-top: 7px;
-            width: 54%;
-        }}
-}
-.nav-link{
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    font-weight: 400;
-}
-.lines{
-    border-left: 1px solid #AAAAAA;
-    height: 25px;
-    margin-top: 8px;
-    margin-left: 50px;
-}
-.menu-activator{
-    cursor: pointer;
-    position: relative;
-    margin-left: 30px;
-    @include media-breakpoint-down(lg){
-        margin-left: 30px;
-    }
-    @include media-breakpoint-down(md){
-        margin-left: 4px;
-    }
-    @include media-breakpoint-down(sm){
-        margin-left: 2px;
-    }
-    img{
-        height: 16px;
-        width: auto;
-        margin-left: 0px;
-        margin-top: -5px;
-        @include media-breakpoint-down(lg){
-            height: 28px;
-            margin-top: -5px;
-        }
-        @include media-breakpoint-down(md){
-            height: 24px;
-            margin-top: -10px;
-        }
-        @include media-breakpoint-down(sm){
-            height: 21px;
-            margin-top: -5px;
-        }
-    }
-}
-.nav-item a.active{
-        color: #000000 !important;
-        border-bottom: 3px solid #000000 !important;
-    }
-
-@include media-breakpoint-down(lg){
-    img{
-        margin-left: -20px;
-        padding-top: 7px;
-    }
-    .lines{
-      margin-left: 85px;
-        }
-        .nav-item{
-            margin-left: 57px;
-        }
-
-}
-@include media-breakpoint-down(md){
-    .lines{
-      margin-left: 45px;
-        }
-        .nav-item{
-            margin-left: 15px;
-        }
-        .menu-activator{
-            img{
-               margin-left: 15px;
-            }
-        }
-}
-@include media-breakpoint-down(sm){
-    .mobile-only{
-        display: inline-block;
-        a{
-            color: #a3a3a3 !important;
-        }
-    }
-    .mediaIcons{
-        ul{
-            list-style: none;
-            display: inline-flex;
-            li{
-                span{
-                    margin-right: 4px;
-                }
-            }
-        }
-    }
-    .only-mobile{
-        display: none;
-    }
-    .web-only{
-        display: none;
-    }
-}
-  // *********** HEADER ENDS *********** //
