--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -2,15 +2,23 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 .blog{
+    
+        padding-top: 100px;
+        margin-top: -200px;
+ 
     .banner{
-        background-color: #e4e4e4;
+        background-color: #f7f5f0;
         padding-top: 140px;
         height: 800px;
         padding: 200px 0px;
-        h1{
-            font-size: 76px;
+        
+        .blog-heading{
+            margin-left: 200px;
+            font-family: 'muli', sans-serif;
+            font-weight: 200;
+            font-size: 55px;
             color: #000000;
-            font-family: Baskerville;
+            
             span{
                 color: #3B3B3B;
             }
@@ -19,7 +27,8 @@
             font-size: 26px;
             color: #707071;
             padding-top: 25px;
-            font-family: 'Muli', sans-serif;
+            font-family: 'muli', sans-serif;
+            margin-left: 200px;
             a{
                 color: #000000;
                 text-decoration: underline;
@@ -64,7 +73,7 @@
                             font-size: 20px;
                             padding-top: 25px;
                             color: #3B3B3B;
-                            font-family: Baskerville;
+                            font-family: 'muli', sans-serif;
                           }
                           
                           a:after {
@@ -89,7 +98,7 @@
                           }
                         h6{
                             color: #707071;
-                            font-family: 'Muli', sans-serif;
+                            font-family: 'muli', sans-serif;
                             font-size: 16px;
                         }
                         img{
@@ -129,7 +138,7 @@
         padding-bottom: 40px;
         h2{
             font-size: 57px;
-            font-family: Baskerville;
+            font-family: 'muli', sans-serif;
             color: #FFFFFF;
         }
         .button{
@@ -142,7 +151,7 @@
             cursor: pointer;
             padding: 10px 20px;
             border-radius: 0px;
-            font-family: 'Muli', sans-serif;
+            font-family: 'muli', sans-serif;
             &:hover{
                 background-color: #FFFFFF;
                 color: #000000;
@@ -161,147 +170,3 @@
         }
     }
 }
-
-// *********** HEADER START*********** //
-
-header{
-    z-index: 1;
-    background-color: #e4e4e4;
-}
-.nav-item{
-    margin-left: 22px;
-}
-.header-logo{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    cursor: pointer;
-}
-.ux-logo{
-    img{
-        margin-left: 28px;
-        margin-top: 7px;
-        width: 75%;
-    }
-}
-h2{
-    font-family: "Muli", sans-serif;
-    font-size: 14px;
-    color: #000000;
-    margin-left: -14px;
-    padding-top: 9px;
-}
-@include media-breakpoint-down(sm){
-    h2{
-        margin-left: -78px;
-        padding-top: 13px;
-    }
-    .ux-logo{
-        img{
-            margin-left: 6px;
-            margin-top: 7px;
-            width: 54%;
-        }}
-}
-.nav-link{
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    font-weight: 400;
-}
-.lines{
-    border-left: 1px solid #AAAAAA;
-    height: 25px;
-    margin-top: 8px;
-    margin-left: 50px;
-}
-.menu-activator{
-    cursor: pointer;
-    position: relative;
-    margin-left: 30px;
-    @include media-breakpoint-down(lg){
-        margin-left: 30px;
-    }
-    @include media-breakpoint-down(md){
-        margin-left: 4px;
-    }
-    @include media-breakpoint-down(sm){
-        margin-left: 2px;
-    }
-    img{
-        height: 16px;
-        width: auto;
-        margin-left: 0px;
-        margin-top: -5px;
-        @include media-breakpoint-down(lg){
-            height: 28px;
-            margin-top: -5px;
-        }
-        @include media-breakpoint-down(md){
-            height: 24px;
-            margin-top: -10px;
-        }
-        @include media-breakpoint-down(sm){
-            height: 21px;
-            margin-top: -5px;
-        }
-    }
-}
-.nav-item a.active{
-        color: #000000;
-        border-bottom: 3px solid #000000;
-    }
-
-@include media-breakpoint-down(lg){
-    img{
-        margin-left: -20px;
-        padding-top: 7px;
-    }
-    .lines{
-      margin-left: 85px;
-        }
-        .nav-item{
-            margin-left: 57px;
-        }
-
-}
-@include media-breakpoint-down(md){
-    .lines{
-      margin-left: 45px;
-        }
-        .nav-item{
-            margin-left: 15px;
-        }
-        .menu-activator{
-            img{
-               margin-left: 15px;
-            }
-        }
-
-}
-@include media-breakpoint-down(sm){
-    .mobile-only{
-        display: inline-block;
-        a{
-            color: #a3a3a3 !important;
-        }
-    }
-    .mediaIcons{
-        ul{
-            list-style: none;
-            display: inline-flex;
-            li{
-                span{
-                    margin-right: 4px;
-                }
-            }
-        }
-    }
-    .only-mobile{
-        display: none;
-    }
-    .web-only{
-        display: none;
-    }
-}
-
-  // *********** HEADER ENDS *********** //
