--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,39 +1,4 @@
-<header>
-   <div class="header-container">
-       <nav class="navbar navbar-expand">
-           <div class="row header-logo">
-               <div class="col-md-3 ux-logo">
-                   <img src="./assets/images/logo6.svg" routerLink="/" alt="Logo">
-               </div>
-               <div class="col-md-7">
-               <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
-               </div>
-           </div>
-           <div class="collapse navbar-collapse">
-             <ul class="navbar-nav ml-auto">
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/works"><span>Work</span></a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About</a>
-               </li>
-               <li class="nav-item web-only">
-                 <a class="nav-link" routerLinkActive="active" routerLink="/services">Services</a>
-               </li>
-               <li class="nav-item web-only">
-                   <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Let's Talk</a>
-               </li>
-               <div class="col-md-1 only-mobile">
-                   <div class="lines"></div>
-               </div>
-               <li class="nav-item menu">
-                   <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png" alt="menu"></a>
-               </li>
-             </ul>
-           </div>
-       </nav>
-   </div>
- </header>
+
 <div class="contact">
 <div class="banner">
    <div class="container">
@@ -43,8 +8,8 @@
             <h1>We are eager to <span> get in touch </span> with you as well </h1>
             <h6>you can drop us an email at <span> <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
          </div>
-         <div class="col-md-6 only-web">
-            <lottie-player class="animations" src="https://assets5.lottiefiles.com/private_files/lf30_kn4foydy.json"  background="transparent"  speed="1"  autoplay style="width: 595px; height: 700px;"></lottie-player>
+         <div class="col-md-6">
+            <img src="/assets/images/Artboard 1 copy 3.svg" alt="">
          </div>
          </div>
       </div>
