--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,7 +2,12 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 :host{
-    padding-top: 0px;
+    padding-top: 100px;
+    margin-top: -200px;
+    background-color: #f7f5f0;
+}
+svg{
+    margin-top: -350px;
 }
 h1{
     font-size: 72px;
@@ -44,7 +49,7 @@ p{
 }
 .home{
     .banner{
-        background-color: #E2E2E2;
+        background-color: #f7f5f0;
         background-position: bottom;
         background-size: 100%;
         background-repeat: no-repeat;
@@ -122,7 +127,7 @@ p{
     }
     .products{
         padding: 150px 0px;
-        background-color: #FFFFFF;
+        background-color: #f7f5f0;
         .button{
             padding-top: 40px;
         }
@@ -181,7 +186,7 @@ p{
         }
     }
     .cater{
-        background-color: #FCFCFC;
+        background-color: #f7f5f0;
         padding: 100px 0px;
         color: #FFF;
         h2{
@@ -197,12 +202,12 @@ p{
             }
          }
         .types{
-            background-color: #FFFFFF;
+            background-color: #f7f5f0;
             cursor: pointer;
             margin-bottom: 25px;
             margin-left: 10px;
             &:hover{
-                background-color: #e9e9e9;
+                background-color: #f7f5f0;
             }
         }
         .image{
@@ -323,7 +328,7 @@ p{
         }
        .left{
            padding: 40px 130px 80px 75px;
-           background-color: #E2E2E2;
+           background-color:#f7f5f0;
            h2{
                font-size: 57px;
              font-family: Baskerville;
@@ -571,7 +576,7 @@ margin-left: 105px;
     }
 }
 .custom-slider-main{
-    background-color: #E2E2E2;
+    background-color: #f7f5f0;
     display: flex;
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -627,7 +632,7 @@ margin-left: 105px;
     // *********************** scroll -effect ***************
 
     .slider-content{
-        background-color: #E2E2E2;
+        background-color: #f7f5f0;
         display: flex;
         scroll-behavior: smooth;
         padding-left: 85px;
@@ -673,147 +678,3 @@ margin-left: 105px;
     }
    }
 
-// *********** HEADER START*********** //
-
-header{
-    z-index: 1;
-    background-color: #E2E2E2;
-    .ux-logo{
-        img{
-            margin-left: 28px;
-            margin-top: 7px;
-            width: 75%;
-        }
-    }
-    h2{
-        font-family: "Muli", sans-serif;
-        font-size: 14px;
-        color: #000000;
-        margin-left: -14px;
-        padding-top: 9px;
-    }
-    @include media-breakpoint-down(sm){
-        h2{
-            margin-left: -78px;
-            padding-top: 13px;
-        }
-        .ux-logo{
-            img{
-                margin-left: 6px;
-                margin-top: 7px;
-                width: 54%;
-            }}
-    }
-}
-.nav-item{
-    margin-left: 22px;
-}
-.header-logo{
-    display: inline-flex;
-    flex-wrap: nowrap;
-    cursor: pointer;
-}
-
-
-.nav-link{
-    font-family: 'Muli', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    font-weight: 400;
-}
-.lines{
-    border-left: 1px solid #AAAAAA;
-    height: 25px;
-    margin-top: 8px;
-    margin-left: 50px;
-}
-.menu-activator{
-    cursor: pointer;
-    position: relative;
-    margin-left: 30px;
-    @include media-breakpoint-down(lg){
-        margin-left: 30px;
-    }
-    @include media-breakpoint-down(md){
-        margin-left: 4px;
-    }
-    @include media-breakpoint-down(sm){
-        margin-left: 2px;
-    }
-    img{
-        height: 16px;
-        width: auto;
-        margin-left: 0px;
-        margin-top: -5px;
-        @include media-breakpoint-down(lg){
-            height: 28px;
-            margin-top: -5px;
-        }
-        @include media-breakpoint-down(md){
-            height: 24px;
-            margin-top: -10px;
-        }
-        @include media-breakpoint-down(sm){
-            height: 21px;
-            margin-top: -5px;
-        }
-    }
-}
-.nav-item a.active{
-        color: #000000;
-        border-bottom: 3px solid #000000;
-    }
-
-@include media-breakpoint-down(lg){
-    img{
-        margin-left: -20px;
-        padding-top: 7px;
-    }
-    .lines{
-      margin-left: 85px;
-        }
-        .nav-item{
-            margin-left: 57px;
-        }
-
-}
-@include media-breakpoint-down(md){
-    .lines{
-      margin-left: 45px;
-        }
-        .nav-item{
-            margin-left: 15px;
-        }
-        .menu-activator{
-            img{
-               margin-left: 15px;
-            }
-        }
-
-}
-@include media-breakpoint-down(sm){
-    .mobile-only{
-        display: inline-block;
-        a{
-            color: #a3a3a3 !important;
-        }
-    }
-    .mediaIcons{
-        ul{
-            list-style: none;
-            display: inline-flex;
-            li{
-                span{
-                    margin-right: 4px;
-                }
-            }
-        }
-    }
-    .only-mobile{
-        display: none;
-    }
-    .web-only{
-        display: none;
-    }
-}
-  // *********** HEADER ENDS *********** //
