--- a/src/app/modules/career/components/job-apply/job-apply.component.scss
+++ b/src/app/modules/career/components/job-apply/job-apply.component.scss
@@ -3,11 +3,14 @@
 @import '~bootstrap/scss/mixins';
 
 .career-ux{
+    padding-top: 100px;
+    margin-top: -200px;
     .banner{
         position: relative;
         background-color: #D3B1FF;
         height: 700px;
         padding: 245px 0px;
+        margin-top: -100px;
        // margin-top: -100px;
         h1{
             font-size: 56px;
