--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -7,6 +7,7 @@
         padding: 245px 0px;
         background-color: #D3B1FF;
         height: 700px;
+        margin-top: -100px;
         h1{
             font-size: 56px;
             color: #3B3B3B;
