--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -1,39 +1,3 @@
-<header>
-  <div class="header-container">
-      <nav class="navbar navbar-expand">
-          <div class="row header-logo">
-              <div class="col-md-3 ux-logo">
-                  <img src="./assets/images/logo6.svg" routerLink="/" alt="Logo">
-              </div>
-              <div class="col-md-7">
-              <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
-              </div>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item web-only">
-                <a class="nav-link" routerLinkActive="active" routerLink="/works"><span>Work</span></a>
-              </li>
-              <li class="nav-item web-only">
-                  <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About</a>
-              </li>
-              <li class="nav-item web-only">
-                <a class="nav-link" routerLinkActive="active" routerLink="/services">Services</a>
-              </li>
-              <li class="nav-item web-only">
-                  <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Let's Talk</a>
-              </li>
-              <div class="col-md-1 only-mobile">
-                  <div class="lines"></div>
-              </div>
-              <li class="nav-item menu">
-                  <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png" alt="menu"></a>
-              </li>
-            </ul>
-          </div>
-      </nav>
-  </div>
-</header>
 <div class="services">
     <div class="banner">
         <div class="container">
@@ -48,7 +12,7 @@
             </div>
         </div>
     </div>
-    <div class="service-layout1">
+    <!-- <div class="service-layout1">
         <div class="row">
             <div class="col-md-6 left-layout">
                 <div class="container">
@@ -59,7 +23,7 @@
               <img src="./assets/images/services/Asset15.svg" alt="Usaility Testing">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="service-layout2">
         <div class="container">
             <div class="row">
